Fix crash on accessing WebEngineView properties too early

WebContentsAdapter is not created together with the QQuickWebEngineView.
Thus querying a view property can lead to a crash if it uses the adapter.
This fix adds the missing guards for contentSize and scrollPosition
as it is done for similar WebEngineView properties.

Task-number: QTBUG-65942
Change-Id: I9c2668a059b08325629f5730608280ba7f3669cf
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>